Firefox nanoscroller scrollbar fix
Removed the height property from .sliding-panel.panel-shown
.content-pane .content-container which fixed a bug where the div's
scrollbar would show up underneath the nanoscroller scrollbar in
Firefox.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -174,8 +174,8 @@ body {
 	  display: block;
 
 	  .content-container {
-		width: 100%;
-		height: 100%;
+		//width: 100%;
+		//height: 100%;
 		padding: 10px 0 5px 0;
 		overflow-x: hidden;
 		overflow-y: auto;
